# WhisperDrop

./: .gitignore  LICENSE  README.md  app.py  app_windows.py  pyproject.toml  run.bat  run.sh  run_cpu.bat  run_cuda.bat
